[metadata]
name = py-wkhtmltox
version = 0.3
author = Matt Reiferson
author_email = mreiferson@gmail.com
description = Python bindings for libwkhtmltox
url = http://github.com/mreiferson/py-wkhtmltox

[options]
include_package_data = True
packages = find:
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, <3.5
install_requires =
    Cython==0.29.24

[options.packages.find]
exclude =
    tests*
